--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^11.0.16",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -49,6 +50,7 @@
     "@material-ui/icons": "^4.11.2",
     "http-proxy-middleware": "^0.19.1",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "sweetalert2-react-content": "^4.0.1"
   }
 }
