--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.0.16",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,7 +52,6 @@
     "@material-ui/icons": "^4.11.2",
     "http-proxy-middleware": "^0.19.1",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
     "sweetalert2-react-content": "^4.0.1"
   }
 }
